attempt fix horizontal scroll youtube, add spotify

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,6 @@
 #app-container {
     display: flex;
     flex-direction: row;
+    width: 100vw;
+    overflow-x: hidden;
 }
